--- a/slides/genomics/session-12/index.html
+++ b/slides/genomics/session-12/index.html
@@ -11,6 +11,7 @@
     <title>Session-13</title>
     <link rel="stylesheet" href="../../reveal/css/reveal.css">
     <link rel="stylesheet" href="../../eaton-lab.css">
+    <link rel="stylesheet" href="../custom.css">    
     <link rel="stylesheet" href="../../reveal/lib/css/zenburn.css">    
 </head>
 
@@ -258,20 +259,36 @@ G ... TCACG CTGCA
     </section>
 
 
-<!-- SLIDE 4 -->
-<section
-    data-background="white" 
-    data-transition="none" 
-    class="future"
-    style="top: -20px; display: none;" 
-    hidden="">
+    <!-- SLIDE 4 -->
+    <section
+        data-background="white" 
+        data-transition="none" 
+        class="future"
+        style="top: -20px; display: none;" 
+        hidden="">
 
-    <h4> Notebook 12.1: Hi-C</h4>
-    <p style="font-size:0.65em; text-align: left;
-    background-color: #b7e2c0; color: #3a6944; margin:30px"> 
+        <h4> Notebook 12.1: Hi-C</h4>
+        <p style="font-size:0.65em; text-align: left;
+        background-color: #b7e2c0; color: #3a6944; margin:30px"> 
 
-    </p>
-    <img src="https://github.com/genomics-course/12-scaffolding/raw/master/data/Hi-C.3.png" style="width:70%">
+        </p>
+        <img src="https://github.com/genomics-course/12-scaffolding/raw/master/data/Hi-C.3.png" style="width:70%">
+    </section>
+
+
+    <!-- SLIDE 4 -->
+    <section
+        data-background="white" 
+        data-transition="none" 
+        class="future"
+        style="top: -20px; display: none;" 
+        hidden="">
+
+        <h5> Notebook 12.1: Scaffolding from Hi-C contact maps</h5>
+        <p style="font-size:0.65em; text-align: left; margin:30px"> 
+        </p>
+        <img src="https://github.com/genomics-course/12-scaffolding/raw/master/data/Hi-C-4.png" style="width:55%">
+    </section>
 </section>
 
 
@@ -283,13 +300,75 @@ G ... TCACG CTGCA
     style="top: -20px; display: none;" 
     hidden="">
 
-    <h4> Notebook 12.1: Hi-C</h4>
+    <h4> Notebook 12.1: Amaranth genome</h4>
     <p style="font-size:0.65em; text-align: left;
     background-color: #b7e2c0; color: #3a6944; margin:30px"> 
 
     </p>
     <img src="https://github.com/genomics-course/12-scaffolding/raw/master/data/amaranth.png" style="width:55%">
 </section>
+
+
+<section
+    class="future"
+    data-transition="none"
+    hidden="">
+
+    <h3> Phylogenomics II </h3>
+    <p style="font-size:28px; margin-right:10%; margin-left: 10%";>
+    It's an exciting time for phylogenetics...
+    </p>
+
+    <div style="position: relative;">
+        <!-- fade out RAD-sampling -->
+        <img class="fragment step-fade-in-then-out" 
+        src="../../data-svg/intro-phylogenomic-sampling.svg"
+        style="margin-top:5%;">
+
+        <!-- fade out RAD-sampling -->
+        <img class="fragment step-fade-in-then-out" 
+        src="../../data-svg/intro-RAD-diagram.svg"
+        style="width:85%; margin-top:5%;">
+
+        <!-- In and out coalescent types -->
+        <img class="fragment step-fade-in-then-out" 
+        src="../../data-svg/intro-tree-outlines.svg" 
+        style="position:absolute; display:block; width:90%; top:15%; left:5%;">
+
+        <!-- In and examples of gene flow -->
+        <span class="fragment fade-in"> 
+            <img 
+            src="../../data-svg/intro-tree-outlines-2.svg" 
+            style="position:absolute; display:block; width:90%; top:15%; left:5%;">
+        </span>        
+    </div>
+</section>
+
+
+<section
+    class="future"
+    data-transition="none"
+    hidden="">
+
+    <h3> Phylogenomics II </h3>
+    <p style="font-size:28px; margin-right:10%; margin-left: 10%";>
+    Background on the method and application of RAD-seq:
+    </p>
+    <img src="https://raw.githubusercontent.com/genomics-course/12-scaffolding/master/data/Andrews-2016.png" style="width:85%">
+</section>
+
+
+<section
+    class="future"
+    data-transition="none"
+    hidden="">
+    <h3> Phylogenomics II </h3>
+    <p style="font-size:28px; margin-right:10%; margin-left: 10%";>
+    Applied phylogenomics example:
+    </p>
+    <img src="https://raw.githubusercontent.com/genomics-course/12-scaffolding/master/data/Eaton-2015.png" style="width:85%">
+</section>
+
 
 
 </div>
