--- a/slides/genomics/session-12/index.html
+++ b/slides/genomics/session-12/index.html
@@ -310,6 +310,36 @@ G ... TCACG CTGCA
 
 
 <section
+    data-background="white" 
+    data-transition="none" 
+    class="future"
+    style="top: -20px; display: none;" 
+    hidden="">
+
+    <h4> Notebook 12.1: Amaranth genome</h4>
+    <p style="font-size:0.85em; margin:50px"> 
+    Visit <a href=https://eaton-lab.org/data/">https://eaton-lab.org/data/</a>
+    to view two genome reports from Dovetail Inc. assemblies. 
+    </p>
+</section>
+
+
+
+
+
+
+<section 
+    data-transition="none"
+    data-background-iframe="
+https://www.polleverywhere.com/free_text_polls/AJurzwsFGpnm8NN3G0eha?preview=true"
+    style="top:-960px; display: block;" 
+    class="future" 
+    hidden="">       
+</section>
+
+
+
+<section
     class="future"
     data-transition="none"
     hidden="">
