--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -47,6 +47,18 @@
     <a href="session-5/index.html">5: Phylogenetics I<a>
     <br>
     <br>
+    <a href="session-10/index.html">10: Genome assembly I<a>
+    <br>
+    <br>
+    <a href="session-11/index.html">11: Genome assembly II<a>
+    <br>
+    <br>
+    <a href="session-12/index.html">12: Hi-C<a>
+    <br>
+    <br>
+    <a href="session-13/index.html">13: RAD-seq<a>
+    <br>
+    <br>                
 
 </div>
 
