--- a/slides/genomics-2019/index.html
+++ b/slides/genomics-2019/index.html
@@ -14,37 +14,27 @@
 </head>
 
 <body>
-<div style="margin: 75px; font-size: 1.25em; line-height: 1.25">
+<div style="margin: 100px; font-size: 1.5em; ">
 
     <hr>
-    <h3>Resources:<br>
-    <a href="https://docs.google.com/document/d/1u5Wwg3q6qSFLnCIE3jx7g78h7jlFI-zDPnLIu3S6Rn4/edit?usp=sharing">
-    Syllabus</a>  
-    </h3> 
-<!-- 
+    Resources:
+    <br>
+    <br>
+    <a href="https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/syllabus.pdf&embedded=true">
+    Syllabus PDF</a>
+    <br>
+    <br>
     <a href="https://nbviewer.jupyter.org/github/genomics-course/">
     Notebook answers (look in session-n/notebooks/)</a>
     <br>
-
-    
- -->
     <br>
     <hr>
-    <h3>Materials:</h3>
-    <p>
-
-        1/22/2020: Intro to bash/juypter/genomics<br> 
-        Lecture: <a href="session-1/index.html">(HTML) </a> <a href="session-1/PDFs/session-1.pdf">(PDF)</a>
-        <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a>
-        <br>
-        Reading: <a href=https://...pdf> Shendure et al. 2017</a>
-
+    Lectures:
     <br>
     <br>
-    </p>
-
-<!-- 
+    <a href="session-1/index.html">1: Intro to Codio/Bash/Jupyter</a>
+    <br>
+    <br>
     <a href="session-2/index.html">2: Intro to Python</a>
     <br>
     <br>
@@ -69,7 +59,6 @@
     <a href="session-13/index.html">13: RAD-seq<a>
     <br>
     <br>                
- -->
 
 </div>
 
