--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -38,7 +38,7 @@
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a>
         <br>
-        Reading: <a href=https://...pdf> Shendure et al. 2017</a>
+        Reading: <a href=readings/Shendure-etal-2017.pdf> Shendure et al. 2017</a>
 
     <br>
     <br>
