--- a/slides/genomics/session-1/index.html
+++ b/slides/genomics/session-1/index.html
@@ -181,6 +181,13 @@
 
 
 
+            <section 
+                data-transition="none"
+                data-background-iframe=https://docs.google.com/viewer?url=https://eaton-lab.org/slides/genomics/readings/Syllabus-2020.pdf&embedded=true>
+            </section>
+
+
+
             <section class="future" data-transition="none">
                 <div class="standard">
                     <h3> Project proposal</h3>
@@ -408,7 +415,7 @@
                     <br>
                     <div class="textbox"><p>
                         You have several notebooks to complete and an assigned paper to read. 
-                        
+
                     <img class=plain src="../../genomics-2019/session-1/data/codio-linux-tutorial.png" style="width: 70%; height: 20%;">
                 </div>
             </section>
