--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="../reveal/lib/css/zenburn.css">    
 </head>
 
-<body>
+<!-- page with scrolling -->
+<body style="overflow-y: auto;">
+
+<!-- wrap text with margins -->
 <div style="margin: 75px; font-size: 1.25em; line-height: 1.25">
 
     <hr>
@@ -21,28 +24,75 @@
     <a href="https://docs.google.com/document/d/1u5Wwg3q6qSFLnCIE3jx7g78h7jlFI-zDPnLIu3S6Rn4/edit?usp=sharing">
     Syllabus</a>  
     </h3> 
-<!-- 
-    <a href="https://nbviewer.jupyter.org/github/genomics-course/">
-    Notebook answers (look in session-n/notebooks/)</a>
-    <br>
 
-    
- -->
     <br>
     <hr>
     <h3>Materials:</h3>
     <p>
 
-        1/22/2020: Intro to bash/juypter/genomics<br> 
-        Lecture: <a href="session-1/index.html">(HTML) </a> <a href="session-1/PDFs/session-1.pdf">(PDF)</a>
+        1/22/2020: Intro to bash/jupyter/genomics<br> 
+        Lecture: <a href="session-1/index.html">(HTML) </a> <a href="session-1/Genomics-1.pdf">(PDF)</a>
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a>
         <br>
         Reading: <a href=readings/Shendure-etal-2017.pdf> Shendure et al. 2017</a>
+    <br>
+    <br>
+        1/27/2020: Intro to Python and genome annotation<br> 
+        Lecture: <a href="session-2/index.html">(HTML) </a> <a href="session-2/Genomics-2.pdf">(PDF)</a>
+        <br>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2-genes/master> Link to assignment </a>
+        <br>
+        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 1, 3, and 4 of the official Python tutorial</a>
+    <br>
+    <br>
+    <!-- 
+        1/29/2020: Advanced Python and ...<br> 
+        Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
+        <br>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
+        <br>
+        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>
+        <br>
+        Yandell, Mark, and Daniel Ence. 2012. “A Beginner’s Guide to Eukaryotic Genome Annotation.” Nature Reviews Genetics 13 (5): 329–42. https://doi.org/10.1038/nrg3174.
+        <br>
+        RNA sequencing the teen years...
 
     <br>
     <br>
+        2/3/2020: Scientific Python and genome structure<br> 
+        Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
+        <br>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
+        <br>
+        Reading: <a href=http://docs.python.org/3/tutorial> Python Data Science Handbook Chapters 1-4.</a>
+    <br>
+    <br>
+        2/5/2020: Scientific Python and genome structure<br> 
+        Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
+        <br>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
+        <br>
+        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>
+
+    <br>
+    <br>
+        1/29/2020: Scientific Python and genome structure<br> 
+        Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
+        <br>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
+        <br>
+        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>
+
+    -->
+
     </p>
+    </div>
+
+</body>
+</html>
+
+
 
 <!-- 
     <a href="session-2/index.html">2: Intro to Python</a>
@@ -70,8 +120,3 @@
     <br>
     <br>                
  -->
-
-</div>
-
-</body>
-</html>
