--- a/slides/genomics/session-2/index.html
+++ b/slides/genomics/session-2/index.html
@@ -552,16 +552,50 @@ Primary Assembly    1   Chromosome  all unspanned-gaps  43
             </section>
 
 
-            <section class="future" data-transition="none">
-                POLL 
-            </section>
+
+            <section 
+                data-transition="none"
+                data-background-iframe="https://www.polleverywhere.com/free_text_polls/Nd8rgsGYAMweZkhz7cPw9?preview=true&controls=none"
+                style="top:-960px; display: block;" 
+                class="future" 
+                hidden="">       
+            </section>    
 
 
             <section class="future" data-transition="none">
-                <div class="standard">
-                <h3> Assigned reading</h3>
-                <img src="../../genomics-2019/session-2/data/Shendure-title.png" style="width:90%">
-                </div>
+                <section class="future" data-transition="none">
+                    <div class="standard">
+                    <h3> Assigned reading</h3>
+                    <img src="../../genomics-2019/session-2/data/Shendure-title.png" style="width:90%">
+                    </div>
+                </section>
+
+                <section>       
+                    <h3> Sanger sequencing technology </h3>
+                    <iframe width="800" height="500" 
+                    src="https://www.youtube.com/embed/FvHRio1yyhQ"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+                </section>
+
+                <section>       
+                    <h3> Illumina sequencing technology </h3>
+                    <iframe width="800" height="500" 
+                    src="https://www.youtube.com/embed/fCd6B5HRaZ8" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+                </section>
+
+                <section>       
+                    <h3> Nanopore sequencing technology </h3>
+                    <iframe width="800" height="500" 
+                    src="https://www.youtube.com/embed/E9-Rm5AoZGw" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+                </section>                    
             </section>
 
 
@@ -569,7 +603,7 @@ Primary Assembly    1   Chromosome  all unspanned-gaps  43
                 <div class="standard">
                 <h3> Python</h3>
                 Why Python, is it fast, is it easy to learn?
-                <img src="https://i.ytimg.com/vi/3Q5jg-2zwpM/maxresdefault.jpg">
+                <img src="https://i.ytimg.com/vi/3Q5jg-2zwpM/maxresdefault.jpg" style="width:70%">
                 </div>
             </section>
 
@@ -604,13 +638,12 @@ Primary Assembly    1   Chromosome  all unspanned-gaps  43
             <section class="future" data-transition="none">
                 <div class="standard">
                 <h3> Assignment</h3>
+                <br>
                 <div class=textbox><p>
                     Complete Reading and notebooks for session 2 at 
                     <a href="https://eaton-lab.org/slides/genomics">https://eaton-lab.org/slides/genomics</a>. Note that 
                     the reading is different from that listed in the syllabus. You only need to read chapters 1, 3, and 4.
                 </p></div>
-                <br>
-                <img src="../..//genomics-2019/session-2/data/jupyter-tab-complete.gif" style="width:80%">
                 </div>
             </section>                      
 
