--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -45,27 +45,34 @@
         <br>
         Reading: <a href=http://docs.python.org/3/tutorial> Chapters 1, 3, and 4 of the official Python tutorial</a>
     <br>
-    <br>
-    <!-- 
-        1/29/2020: Advanced Python and ...<br> 
+    <br>   
+        1/29/2020: Advanced Python <br> 
         Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
         <br>
-        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>
-        <br>
-        Yandell, Mark, and Daniel Ence. 2012. “A Beginner’s Guide to Eukaryotic Genome Annotation.” Nature Reviews Genetics 13 (5): 329–42. https://doi.org/10.1038/nrg3174.
-        <br>
-        RNA sequencing the teen years...
-
+        Reading:<br>    
+        - <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8</a><br>
+        - <a href="..."> Yandell et al. 2012, Genome Annotation</a>
+        <!-- Yandell, Mark, and Daniel Ence. 2012. “A Beginner’s Guide to Eukaryotic Genome Annotation.” Nature Reviews Genetics 13 (5): 329–42. https://doi.org/10.1038/nrg3174. -->
     <br>
     <br>
+    <!--
         2/3/2020: Scientific Python and genome structure<br> 
-        Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
+        Lecture: 
+        <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
         <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
+        Notebooks: 
+        <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
         <br>
-        Reading: <a href=http://docs.python.org/3/tutorial> Python Data Science Handbook Chapters 1-4.</a>
+        Reading: <br>
+        - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3,4 Python Data Science Handbook</a><br>
+        - <a href="...">Stark et al. 2019</a>
+
+-->
+
+        <!-- Stark, Rory, Marta Grzelak, and James Hadfield. 2019. “RNA Sequencing: The Teenage Years.” Nature Reviews Genetics 20 (11): 631–56. https://doi.org/10.1038/s41576-019-0150-2. -->
+<!-- 
     <br>
     <br>
         2/5/2020: Scientific Python and genome structure<br> 
@@ -82,10 +89,8 @@
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
         <br>
-        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>
-
-    -->
-
+        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>  
+ -->
     </p>
     </div>
 
