--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -35,7 +35,8 @@
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a>
         <br>
-        Reading: <a href=readings/Shendure-etal-2017.pdf> Shendure et al. 2017</a>
+        Reading:<br>
+        - <a href=readings/Shendure-etal-2017.pdf> Shendure et al. 2017</a>
     <br>
     <br>
         1/27/2020: Intro to Python and genome annotation<br> 
@@ -43,7 +44,8 @@
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2-genes/master> Link to assignment </a>
         <br>
-        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 1, 3, and 4 of the official Python tutorial</a>
+        Reading: <br>
+        - <a href=http://docs.python.org/3/tutorial> Chapters 1, 3, and 4 of the official Python tutorial</a>
     <br>
     <br>   
         1/29/2020: Advanced Python <br> 
@@ -52,8 +54,8 @@
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
         <br>
         Reading:<br>    
-        - <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8</a><br>
-        - <a href="..."> Yandell et al. 2012, Genome Annotation</a>
+        - <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a><br>
+        - <a href="readings/Yandell-etal-2012.pdf"> Yandell et al. 2012, Genome Annotation</a>
         <!-- Yandell, Mark, and Daniel Ence. 2012. “A Beginner’s Guide to Eukaryotic Genome Annotation.” Nature Reviews Genetics 13 (5): 329–42. https://doi.org/10.1038/nrg3174. -->
     <br>
     <br>
