--- a/slides/genomics/session-3/index.html
+++ b/slides/genomics/session-3/index.html
@@ -39,7 +39,7 @@
                 <h1 class="title" style="color:#5D9B84">
                 Principles and Applications of Modern <br> DNA Sequencing</h1>
                 <h5 style="color: lightgrey"> EEEB GU4055</h5>
-                <h4 style="color: white">Session 2: Python</h4>
+                <h4 style="color: white">Session 3: Python Advanced</h4>
                 <br>
                 </div>
             </section>
