--- a/slides/genomics/session-3/index.html
+++ b/slides/genomics/session-3/index.html
@@ -698,11 +698,27 @@
 
             <section class="future" data-transition="none">
                 <div class="standard">
-                <h3> Interactive exercise writing functions</h3>
+                <h3> In class exercise writing functions</h3>
                 <div class="textbox"><p>
-                    Write a function from scratch that uses the 'random' library in some way. An example could be to create a dice rolling function, or a function that randomly mutates a string of 
-                    DNA that it accepts as an argument. Try to get creative, and share ideas and code with your neighbor.
+                    Write a function from scratch that uses the 'random' library to mutate a sequence of DNA. Which 'random' functions will you use? What arguments will the function take? Try to get creative, and share ideas and code with your neighbor.
                 </p></div>
+                <pre><code class="python">
+  # write a mutate function
+  def mutate(arg1, arg2, ...):
+      ...
+  
+  # test the function on a string of DNA
+  newdna = mutate(dna, args...)
+
+  # compare visually or with code
+  print(dna)
+  print(newdna)
+              </code></pre>
+              <pre><code class="python" style="background: grey">        
+  "AGGTTTTACCGGTATGAGTC"
+  "AGGTATTACCGGTATGAGTC"
+              </code></pre>
+
                 </div>
             </section>
 
