--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -31,7 +31,8 @@
         1/22/2020: Intro to bash/jupyter/genomics<br> 
         Lecture: <a href="session-1/index.html">(HTML) </a> <a href="session-1/Genomics-1.pdf">(PDF)</a>
         <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a> 
+        <a href="...">(Answers)</a>
         <br>
         Reading:<br>
         - <a href=readings/Shendure-etal-2017.pdf> Shendure et al. 2017</a>
@@ -41,6 +42,7 @@
         Lecture: <a href="session-2/index.html">(HTML) </a> <a href="session-2/Genomics-2.pdf">(PDF)</a>
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2-genes/master> Link to assignment </a>
+        <a href="...">(Answers)</a>        
         <br>
         Reading: <br>
         - <a href=http://docs.python.org/3/tutorial> Chapters 1, 3, and 4 of the official Python tutorial</a>
@@ -56,21 +58,17 @@
         - <a href="readings/Yandell-etal-2012.pdf"> Yandell et al. 2012, Genome Annotation</a>
         <!-- Yandell, Mark, and Daniel Ence. 2012. “A Beginner’s Guide to Eukaryotic Genome Annotation.” Nature Reviews Genetics 13 (5): 329–42. https://doi.org/10.1038/nrg3174. -->
     <br>
-    <br>
-    <!--
-        2/3/2020: Scientific Python and genome structure<br> 
+    <br>   
+        2/3/2020: Scientific Python <br> 
         Lecture: 
-        <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
+        <a href="session-4/index.html">(HTML) </a> <a href="session-4/Genomics-4.pdf">(PDF)</a>
         <br>
         Notebooks: 
-        <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
+        <a href=https://mybinder.org/v2/gh/genomics-course/4-scientific-python/master> Link to assignment </a>
         <br>
         Reading: <br>
-        - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3,4 Python Data Science Handbook</a><br>
-        - <a href="...">Stark et al. 2019</a>
-
--->
-
+        - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3 Python Data Science Handbook</a><br>
+        - <a href="readings/Waterhouse-etal-2012.pdf">Waterhouse et al. 2012</a>
         <!-- Stark, Rory, Marta Grzelak, and James Hadfield. 2019. “RNA Sequencing: The Teenage Years.” Nature Reviews Genetics 20 (11): 631–56. https://doi.org/10.1038/s41576-019-0150-2. -->
 <!-- 
     <br>
