--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -59,12 +59,12 @@
         <!-- Yandell, Mark, and Daniel Ence. 2012. “A Beginner’s Guide to Eukaryotic Genome Annotation.” Nature Reviews Genetics 13 (5): 329–42. https://doi.org/10.1038/nrg3174. -->
     <br>
     <br>   
-        2/3/2020: Scientific Python <br> 
+        2/3/2020: Scientific Python, Homology and Blast <br> 
         Lecture: 
         <a href="session-4/index.html">(HTML) </a> <a href="session-4/Genomics-4.pdf">(PDF)</a>
         <br>
         Notebooks: 
-        <a href=https://mybinder.org/v2/gh/genomics-course/4-scientific-python/master> Link to assignment </a>
+        <a href=https://mybinder.org/v2/gh/genomics-course/4-homology-blast/master> Link to assignment </a>
         <br>
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3 Python Data Science Handbook</a><br>
