--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -58,8 +58,8 @@
         - <a href="readings/Yandell-etal-2012.pdf"> Yandell et al. 2012, Genome Annotation</a>
         <!-- Yandell, Mark, and Daniel Ence. 2012. “A Beginner’s Guide to Eukaryotic Genome Annotation.” Nature Reviews Genetics 13 (5): 329–42. https://doi.org/10.1038/nrg3174. -->
     <br>
-    <br>   
-        2/3/2020: Scientific Python, Homology and Blast <br> 
+    <br>
+        2/3/2020: Scientific Python <br> 
         Lecture: 
         <a href="session-4/index.html">(HTML) </a> <a href="session-4/Genomics-4.pdf">(PDF)</a>
         <br>
@@ -69,6 +69,17 @@
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3 Python Data Science Handbook</a><br>
         - <a href="readings/Waterhouse-etal-2012.pdf">Waterhouse et al. 2012</a>
+    <br>
+    <br>
+        2/5/2020: Homology and Blast <br> 
+        Lecture: 
+        <a href="session-5/index.html">(HTML) </a> <a href="session-5/Genomics-5.pdf">(PDF)</a>
+        <br>
+        Notebooks: 
+        <a href=https://mybinder.org/v2/gh/genomics-course/5-phylogenetics/master> Link to assignment </a>
+        <br>
+        Reading: <br>
+        - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapter 4 (plotting) of the Python Data Science Handbook</a><br>
         <!-- Stark, Rory, Marta Grzelak, and James Hadfield. 2019. “RNA Sequencing: The Teenage Years.” Nature Reviews Genetics 20 (11): 631–56. https://doi.org/10.1038/s41576-019-0150-2. -->
 <!-- 
     <br>
