--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -31,8 +31,9 @@
         1/22/2020: Intro to bash/jupyter/genomics<br> 
         Lecture: <a href="session-1/index.html">(HTML) </a> <a href="session-1/Genomics-1.pdf">(PDF)</a>
         <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a> 
-        <a href="...">(Answers)</a>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a><br>
+        Answers: 
+            <a href="../answers/nb-1.1-bash-genomes.html">(nb-1.1)</a>
         <br>
         Reading:<br>
         - <a href=readings/Shendure-etal-2017.pdf> Shendure et al. 2017</a>
@@ -41,8 +42,11 @@
         1/27/2020: Intro to Python and genome annotation<br> 
         Lecture: <a href="session-2/index.html">(HTML) </a> <a href="session-2/Genomics-2.pdf">(PDF)</a>
         <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2-genes/master> Link to assignment </a>
-        <a href="...">(Answers)</a>        
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2-genes/master> Link to assignment </a><br>
+        Answers: 
+            <a href="../answers/nb-2.0-Python-objects.html">(nb-2.0)</a>
+            <a href="../answers/nb-2.1-conditionals.html">(nb-2.1)</a>
+            <a href="../answers/nb-2.2-functions.html">(nb-2.2)</a>
         <br>
         Reading: <br>
         - <a href=http://docs.python.org/3/tutorial> Chapters 1, 3, and 4 of the official Python tutorial</a>
@@ -52,6 +56,11 @@
         Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
+        <br>
+        Answers: 
+            <a href="../answers/nb-3.0-files.html">(nb-3.0)</a>
+            <a href="../answers/nb-3.1-dictionaries">(nb-3.1)</a>
+            <a href="../answers/nb-3.2-transcription-translation.html">(nb-3.2)</a>
         <br>
         Reading:<br>    
         - <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a><br>
@@ -65,6 +74,10 @@
         <br>
         Notebooks: 
         <a href=https://mybinder.org/v2/gh/genomics-course/4-homology-blast/master> Link to assignment </a>
+        <br>
+        Answers: 
+            <a href="../answers/nb-4.0-numpy.html">(nb-4.0)</a>
+            <a href="../answers/nb-4.1-pandas">(nb-4.1)</a>
         <br>
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3 Python Data Science Handbook</a><br>
