--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -33,7 +33,7 @@
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/1-introduction/master> Link to assignment </a><br>
         Answers: 
-            <a href="../answers/nb-1.1-bash-genomes.html">(nb-1.1)</a>
+            <a href="./answers/nb-1.1-bash-genomes.html">(nb-1.1)</a>
         <br>
         Reading:<br>
         - <a href=readings/Shendure-etal-2017.pdf> Shendure et al. 2017</a>
@@ -44,9 +44,9 @@
         <br>
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2-genes/master> Link to assignment </a><br>
         Answers: 
-            <a href="../answers/nb-2.0-Python-objects.html">(nb-2.0)</a>
-            <a href="../answers/nb-2.1-conditionals.html">(nb-2.1)</a>
-            <a href="../answers/nb-2.2-functions.html">(nb-2.2)</a>
+            <a href="./answers/nb-2.0-Python-objects.html">(nb-2.0)</a>
+            <a href="./answers/nb-2.1-conditionals.html">(nb-2.1)</a>
+            <a href="./answers/nb-2.2-functions.html">(nb-2.2)</a>
         <br>
         Reading: <br>
         - <a href=http://docs.python.org/3/tutorial> Chapters 1, 3, and 4 of the official Python tutorial</a>
@@ -58,9 +58,9 @@
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
         <br>
         Answers: 
-            <a href="../answers/nb-3.0-files.html">(nb-3.0)</a>
-            <a href="../answers/nb-3.1-dictionaries">(nb-3.1)</a>
-            <a href="../answers/nb-3.2-transcription-translation.html">(nb-3.2)</a>
+            <a href="./answers/nb-3.0-files.html">(nb-3.0)</a>
+            <a href="./answers/nb-3.1-dictionaries">(nb-3.1)</a>
+            <a href="./answers/nb-3.2-transcription-translation.html">(nb-3.2)</a>
         <br>
         Reading:<br>    
         - <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a><br>
@@ -76,8 +76,8 @@
         <a href=https://mybinder.org/v2/gh/genomics-course/4-homology-blast/master> Link to assignment </a>
         <br>
         Answers: 
-            <a href="../answers/nb-4.0-numpy.html">(nb-4.0)</a>
-            <a href="../answers/nb-4.1-pandas">(nb-4.1)</a>
+            <a href="./answers/nb-4.0-numpy.html">(nb-4.0)</a>
+            <a href="./answers/nb-4.1-pandas">(nb-4.1)</a>
         <br>
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3 Python Data Science Handbook</a><br>
