--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -76,8 +76,8 @@
         <a href=https://mybinder.org/v2/gh/genomics-course/4-homology-blast/master> Link to assignment </a>
         <br>
         Answers: 
-            <a href="./answers/nb-4.0-numpy.html">(nb-4.0)</a>
-            <a href="./answers/nb-4.1-pandas">(nb-4.1)</a>
+            <a href="./answers/nb-4.1-numpy.html">(nb-4.1)</a>
+            <a href="./answers/nb-4.2-pandas.html">(nb-4.2)</a>
         <br>
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3 Python Data Science Handbook</a><br>
