link fixed aggaingit add index.html !

--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -77,7 +77,7 @@
         <br>
         Answers: 
             <a href="./answers/nb-4.1-numpy.html">(nb-4.1)</a>
-            <a href="./answers/nb-4.2-pandas.html">(nb-4.2)</a>
+            <a href="./answers/nb-4.2-pandas-GFF.html">(nb-4.2)</a>
         <br>
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapters 2,3 Python Data Science Handbook</a><br>
