--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -94,16 +94,22 @@
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapter 4 (plotting) of the Python Data Science Handbook</a><br>
         <!-- Stark, Rory, Marta Grzelak, and James Hadfield. 2019. “RNA Sequencing: The Teenage Years.” Nature Reviews Genetics 20 (11): 631–56. https://doi.org/10.1038/s41576-019-0150-2. -->
-<!-- 
-    <br>
-    <br>
-        2/5/2020: Scientific Python and genome structure<br> 
-        Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
-        <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
-        <br>
-        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>
 
+    <br>
+    <hr>
+    <br>
+        2/24/2020: Introduction to Genome Assembly<br> 
+        Lecture: <a href="session-10/index.html">(HTML) </a> <a href="session-10/Genomics-10.pdf">(PDF)</a>
+        <br>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/10-shotgun/master> Link to assignment </a>
+        <br>
+        Answers:
+            (nb-10.1)  
+            (nb-10.2)
+            (nb-10.3)
+        <br>
+        Reading: <a href=readings/Compeau-etal-2011.pdf> Compeau et al. 2011</a>
+<!--
     <br>
     <br>
         1/29/2020: Scientific Python and genome structure<br> 
@@ -112,7 +118,7 @@
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
         <br>
         Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>  
- -->
+-->
     </p>
     </div>
 
