--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -109,6 +109,22 @@
             (nb-10.3)
         <br>
         Reading: <a href=readings/Compeau-etal-2011.pdf> Compeau et al. 2011</a>
+
+    <br>
+    <br>
+        2/26/2020: Genome Assembly and Scaffolding<br> 
+        Lecture: <a href="session-11/index.html">(HTML) </a> <a href="session-11/Genomics-11.pdf">(PDF)</a>
+        <br>
+        Notebooks: (Coming soon!) 
+        <!-- <a href=https://mybinder.org/v2/gh/genomics-course/10-deBruijn/master> Link to assignment </a> -->
+        <br>
+        Answers:
+            <!-- (nb-10.1)   -->
+            <!-- (nb-10.2) -->
+            <!-- (nb-10.3) -->
+        <br>
+        Reading: (Coming soon!)
+        <!-- <a href=readings/Compeau-etal-2011.pdf> Compeau et al. 2011</a>         -->
 <!--
     <br>
     <br>
