--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -104,9 +104,9 @@
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/10-deBruijn/master> Link to assignment </a>
         <br>
         Answers:
-            (nb-10.1)  
-            (nb-10.2)
-            (nb-10.3)
+            <a href="./answers/nb-10.1-kmers.html">(nb-10.1)</a><br>
+            <a href="./answers/nb-10.2-de-Bruijn.html">(nb-10.2)</a><br>
+            <a href="./answers/nb-10.3-denovo-assemblies.html">(nb-10.3)</a><br>b
         <br>
         Reading: <a href=readings/Compeau-etal-2011.pdf> Compeau et al. 2011</a>
 
@@ -123,8 +123,10 @@
             <!-- (nb-10.2) -->
             <!-- (nb-10.3) -->
         <br>
-        Reading: (Coming soon!)
-        <!-- <a href=readings/Compeau-etal-2011.pdf> Compeau et al. 2011</a>         -->
+        Reading (in this order): 
+        <a href=./readings/Li_and_Harkess-2017.pdf> Li and Harkess 2017</a><br>        
+        <a href=./readings/Lanfear-etal-2020.pdf> Lanfear et al. 2020</a><br>
+        <a href=./readings/Lightfoot-etal-2017.pdf> Lightfoot et al. 2017</a><br>
 <!--
     <br>
     <br>
