--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -115,8 +115,8 @@
         2/26/2020: Genome Assembly and Scaffolding<br> 
         Lecture: <a href="session-11/index.html">(HTML) </a> <a href="session-11/Genomics-11.pdf">(PDF)</a>
         <br>
-        Notebooks: (Coming soon!) 
-        <!-- <a href=https://mybinder.org/v2/gh/genomics-course/10-deBruijn/master> Link to assignment </a> -->
+        Notebooks: 
+        <a href=https://mybinder.org/v2/gh/genomics-course/11-assembly/master> Link to assignment </a>
         <br>
         Answers:
             <!-- (nb-10.1)   -->
