readings for 11 up

--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -125,7 +125,7 @@
         <br>
         Reading (in this order): 
         <a href=./readings/Li_and_Harkess-2017.pdf> Li and Harkess 2017</a><br>        
-        <a href=./readings/Lanfear-etal-2020.pdf> Lanfear et al. 2020</a><br>
+        <a href=./readings/Wang-etal-2020.pdf> Wang et al. 2020</a><br>
         <a href=./readings/Lightfoot-etal-2017.pdf> Lightfoot et al. 2017</a><br>
 <!--
     <br>
