--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -104,9 +104,9 @@
         Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/10-deBruijn/master> Link to assignment </a>
         <br>
         Answers:<br>
-            <a href="./answers/nb-10.1-kmers.html">(nb-10.1)</a><br>
-            <a href="./answers/nb-10.2-de-Bruijn.html">(nb-10.2)</a><br>
-            <a href="./answers/nb-10.3-denovo-assemblies.html">(nb-10.3)</a><br>
+            <a href="./answers/nb-10.1-kmers.html">(nb-10.1)</a>
+            <a href="./answers/nb-10.2-de-Bruijn.html">(nb-10.2)</a>
+            <a href="./answers/nb-10.3-denovo-assemblies.html">(nb-10.3)</a>
         <br>
         Reading: <a href=readings/Compeau-etal-2011.pdf> Compeau et al. 2011</a>
 
