--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -127,6 +127,27 @@
         - <a href=./readings/Li_and_Harkess-2017.pdf> Li and Harkess 2017</a><br>        
         - <a href=./readings/Wang-etal-2020.pdf> Wang et al. 2020</a><br>
         - <a href=./readings/Lightfoot-etal-2017.pdf> Lightfoot et al. 2017</a><br>
+
+    <br>
+    <br>
+        3/2/2020: Genome Assembly and Scaffolding<br> 
+        Lecture: Continued from Session 11
+        <br>
+        Notebooks: 
+        <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenetics-I/master> Link to assignment </a>
+        <br>
+        Answers:
+            <!-- (nb-10.1)   -->
+            <!-- (nb-10.2) -->
+            <!-- (nb-10.3) -->
+        <br>
+        Reading (in this order): <br>
+        - <a href=./readings/Baum-and-Offner-2008.pdf> Baum and Offner 2008</a><br>
+        - <a href=./readings/Rosenberg-and-Nordborg-2002.pdf> Rosenberg and Nordborg 2002</a><br>        
+
+
+
+
 <!--
     <br>
     <br>
