--- a/slides/genomics/session-11/index.html
+++ b/slides/genomics/session-11/index.html
@@ -199,7 +199,41 @@
                     <h3>Scaffolding: Amaranthus Hi-C Assembly</h3>
                     <img src='https://github.com/genomics-course/12-scaffolding/raw/master/data/amaranth.png' style="width:38%">
                 </div>
-            </section>            
+            </section>
+
+
+            <section class="future" data-transition="none">
+                <div class="standard">
+                    <h3>Scaffolding: Amaranthus Hi-C Assembly</h3>
+                    <img src='https://github.com/genomics-course/12-scaffolding/raw/master/data/amaranth.png' style="width:38%">
+                </div>
+            </section>
+
+
+            <section class="future" data-transition="none">
+                <h3>10X genomics linked-read sequencing</h3>
+                <iframe width="900" height="600" src="https://www.youtube.com/embed/aUyFzwRFWJQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </section>
+
+
+            <section class="future" data-transition="none">
+                <div class="standard">
+                    <h3>Major Genome Projects</h3>
+                    <img src="../../data-img/10KP-project.png" style="width:60%">
+                </div>               
+            </section>
+
+
+            <section class="future" data-transition="none">
+                <div class="standard">
+                    <h3>Major Genome Projects</h3>
+                    <img src="../../data-img/BioGenome-project.png" style="width:45%">
+                </div>               
+            </section>
+
+
+
 
 
 
