--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -119,9 +119,8 @@
         <a href=https://mybinder.org/v2/gh/genomics-course/11-assembly/master> Link to assignment </a>
         <br>
         Answers:
-            <!-- (nb-10.1)   -->
-            <!-- (nb-10.2) -->
-            <!-- (nb-10.3) -->
+            <a href="./answers/nb-11.1-assembly.html">(nb-11.1)</a>
+            <a href="./answers/nb-11.2-pacbio.html">(nb-11.2)</a>
         <br>
         Reading (in this order): <br>
         - <a href=./readings/Li_and_Harkess-2017.pdf> Li and Harkess 2017</a><br>        
@@ -144,6 +143,26 @@
         Reading (in this order): <br>
         - <a href=./readings/Baum-and-Offner-2008.pdf> Baum and Offner 2008</a><br>
         - <a href=./readings/Rosenberg-and-Nordborg-2002.pdf> Rosenberg and Nordborg 2002</a><br>        
+
+
+    <br>
+    <br>
+        3/4/2020: Phylogenetics<br> 
+        Lecture: <a href="session-13/index.html">(HTML) </a> <a href="session-13/Genomics-13.pdf">(PDF)</a>
+        <br>
+        <br>
+        Notebooks: (Coming soon)
+        <!-- <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenetics-I/master> Link to assignment </a> -->
+        <br>
+        Answers:
+            <!-- (nb-10.1)   -->
+            <!-- (nb-10.2) -->
+            <!-- (nb-10.3) -->
+        <br>
+        Reading (in this order): <br>
+        - <a href=./readings/McCormack-etal-2013.pdf> McCormack et al. 2013</a><br>
+        - <a href=./readings/.pdf> Rosenberg and Nordborg 2002</a><br>
+        - <a href=./readings/Rosenberg-and-Nordborg-2002.pdf> Rosenberg and Nordborg 2002</a><br>
 
 
 
