--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -150,7 +150,6 @@
         3/4/2020: Phylogenetics<br> 
         Lecture: <a href="session-13/index.html">(HTML) </a> <a href="session-13/Genomics-13.pdf">(PDF)</a>
         <br>
-        <br>
         Notebooks: (Coming soon)
         <!-- <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenetics-I/master> Link to assignment </a> -->
         <br>
@@ -161,7 +160,7 @@
         <br>
         Reading (in this order): <br>
         - <a href=./readings/McCormack-etal-2013.pdf> McCormack et al. 2013</a><br>
-        - <a href=./readings/.pdf> Rosenberg and Nordborg 2002</a><br>
+        - <a href=./readings/Rokas-etal-2003.pdf> Rokas et al. 2003</a><br>
         - <a href=./readings/Rosenberg-and-Nordborg-2002.pdf> Rosenberg and Nordborg 2002</a><br>
 
 
