--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -91,6 +91,10 @@
         Notebooks: 
         <a href=https://mybinder.org/v2/gh/genomics-course/5-phylogenetics-I/master> Link to assignment </a>
         <br>
+        Answers: 
+            <a href="./answers/nb-5.1-review.html">(nb-5.1)</a>
+            <a href="./answers/nb-5.2-APIs.html">(nb-5.2)</a>
+        <br>
         Reading: <br>
         - <a href="https://jakevdp.github.io/PythonDataScienceHandbook/"> Chapter 4 (plotting) of the Python Data Science Handbook</a><br>
         <!-- Stark, Rory, Marta Grzelak, and James Hadfield. 2019. “RNA Sequencing: The Teenage Years.” Nature Reviews Genetics 20 (11): 631–56. https://doi.org/10.1038/s41576-019-0150-2. -->
@@ -123,7 +127,7 @@
             <a href="./answers/nb-11.2-pacbio.html">(nb-11.2)</a>
         <br>
         Reading (in this order): <br>
-        - <a href=./readings/Li_and_Harkess-2017.pdf> Li and Harkess 2017</a><br>        
+        - <a href=./readings/Li_and_Harkess-2017.pdf> Li and Harkess 2017</a><br>
         - <a href=./readings/Wang-etal-2020.pdf> Wang et al. 2020</a><br>
         - <a href=./readings/Lightfoot-etal-2017.pdf> Lightfoot et al. 2017</a><br>
 
@@ -136,9 +140,8 @@
         <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenetics-I/master> Link to assignment </a>
         <br>
         Answers:
-            <!-- (nb-10.1)   -->
-            <!-- (nb-10.2) -->
-            <!-- (nb-10.3) -->
+            <a href="./answers/nb-12.1-tree-thinking.html">(nb-12.1)</a>
+            <a href="./answers/nb-12.2-phylogenetics.html">(nb-12.2)</a>
         <br>
         Reading (in this order): <br>
         - <a href=./readings/Baum-and-Offner-2008.pdf> Baum and Offner 2008</a><br>
@@ -150,13 +153,7 @@
         3/4/2020: Phylogenetics<br> 
         Lecture: <a href="session-13/index.html">(HTML) </a> <a href="session-13/Genomics-13.pdf">(PDF)</a>
         <br>
-        Notebooks: (Coming soon)
-        <!-- <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenetics-I/master> Link to assignment </a> -->
-        <br>
-        Answers:
-            <!-- (nb-10.1)   -->
-            <!-- (nb-10.2) -->
-            <!-- (nb-10.3) -->
+        Notebooks: (No assignment) 
         <br>
         Reading (in this order): <br>
         - <a href=./readings/McCormack-etal-2013.pdf> McCormack et al. 2013</a><br>
@@ -164,6 +161,19 @@
         - <a href=./readings/Rosenberg-and-Nordborg-2002.pdf> Rosenberg and Nordborg 2002</a><br>
 
 
+    <br>
+    <br>
+        3/10/2020: Phylogenomics<br> 
+        Lecture: <a href="session-14/index.html">(HTML) </a> <a href="session-14/Genomics-14.pdf">(PDF)</a>
+        <br>
+        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenomics/master> Link to assignment </a>
+        <br>
+        Answers:
+            <!-- (nb-10.1)   -->
+            <!-- (nb-10.2) -->
+            <!-- (nb-10.3) -->
+        <br>
+        Reading (No Reading -- review for midterm): <br>
 
 
 <!--
