new binder link

--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -166,26 +166,10 @@
         3/10/2020: Phylogenomics<br> 
         Lecture: <a href="session-14/index.html">(HTML) </a> <a href="session-14/Genomics-14.pdf">(PDF)</a>
         <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenomics/master> Link to assignment </a>
-        <br>
-        Answers:
-            <!-- (nb-10.1)   -->
-            <!-- (nb-10.2) -->
-            <!-- (nb-10.3) -->
+        In Class Exercise Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenomics/master> Link to assignment </a>
         <br>
         Reading (No Reading -- review for midterm): <br>
 
-
-<!--
-    <br>
-    <br>
-        1/29/2020: Scientific Python and genome structure<br> 
-        Lecture: <a href="session-3/index.html">(HTML) </a> <a href="session-3/Genomics-3.pdf">(PDF)</a>
-        <br>
-        Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/3-python-advanced/master> Link to assignment </a>
-        <br>
-        Reading: <a href=http://docs.python.org/3/tutorial> Chapters 5, 7, and 8 of the official Python tutorial</a>  
--->
     </p>
     </div>
 
