--- a/slides/genomics/session-14/index.html
+++ b/slides/genomics/session-14/index.html
@@ -201,7 +201,7 @@
                     <div class="standard">
                     <h3> Coalescent Exercise</h3>
                     <br>
-                    <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenomics/master?filepath=nb-13.1-MSC.ipynb>Link to notebook 13.1 (MSC)</a>
+                    <a https://mybinder.org/v2/gh/genomics-course/2020-phylogenomics/master?filepath=nb-13.1-MSC-short.ipynb>Link to notebook 13.1 (MSC)</a>
                     </div>
                 </section>
             </section>
